[gd_scene load_steps=4 format=3 uid="uid://c6sviqoscah17"]

[ext_resource type="Script" path="res://Scripts/levels.gd" id="1_dcvw3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_basbj"]
bg_color = Color(0.121569, 0.113725, 0.329412, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6kjkn"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="Levels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dcvw3")

[node name="Levels" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="Level1" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "1"

[node name="Label" type="Label" parent="Levels/Level1"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -67.0
offset_top = -4.0
offset_right = -25.0
offset_bottom = 65.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level2" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "2"

[node name="Label2" type="Label" parent="Levels/Level2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -66.0
offset_top = -4.0
offset_right = -24.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level3" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "3"

[node name="Label3" type="Label" parent="Levels/Level3"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = -4.0
offset_right = -18.0
offset_bottom = 65.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level4" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "4"

[node name="Label4" type="Label" parent="Levels/Level4"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -63.0
offset_top = -4.0
offset_right = -21.0
offset_bottom = 65.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level5" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "5"

[node name="Label5" type="Label" parent="Levels/Level5"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -61.0
offset_top = -4.0
offset_right = -19.0
offset_bottom = 65.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level6" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "6"

[node name="Label6" type="Label" parent="Levels/Level6"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -66.0
offset_right = -24.0
offset_bottom = 69.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level7" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "7"

[node name="Label7" type="Label" parent="Levels/Level7"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -57.0
offset_right = -15.0
offset_bottom = 69.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level8" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "8"

[node name="Label8" type="Label" parent="Levels/Level8"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_right = -18.0
offset_bottom = 69.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level9" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "9"

[node name="Label9" type="Label" parent="Levels/Level9"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -68.0
offset_right = -26.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level10" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "10"

[node name="Label10" type="Label" parent="Levels/Level10"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.943
anchor_right = 0.943
offset_left = -42.061
offset_right = -0.0610046
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level11" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "11"

[node name="Label11" type="Label" parent="Levels/Level11"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -70.0
offset_top = 1.0
offset_right = -28.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level12" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "12"

[node name="Label12" type="Label" parent="Levels/Level12"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -54.0
offset_top = 1.0
offset_right = -12.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level13" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "13"

[node name="Label13" type="Label" parent="Levels/Level13"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = 1.0
offset_right = -10.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level14" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "14"

[node name="Label14" type="Label" parent="Levels/Level14"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.006
anchor_right = 1.0
anchor_bottom = 0.006
offset_left = -57.0
offset_top = 0.046
offset_right = -15.0
offset_bottom = 69.046
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level15" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "15"

[node name="Label15" type="Label" parent="Levels/Level15"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 1.0
offset_right = -30.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level16" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "16"

[node name="Label16" type="Label" parent="Levels/Level16"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -68.0
offset_top = -2.0
offset_right = -26.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level17" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "17"

[node name="Label17" type="Label" parent="Levels/Level17"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -61.0
offset_top = -2.0
offset_right = -19.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level18" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "18"

[node name="Label18" type="Label" parent="Levels/Level18"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -59.0
offset_top = -2.0
offset_right = -17.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level19" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "19"

[node name="Label19" type="Label" parent="Levels/Level19"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = -0.013
anchor_right = 1.0
anchor_bottom = -0.013
offset_left = -69.0
offset_top = 0.0670002
offset_right = -27.0
offset_bottom = 69.067
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level20" type="Button" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_basbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6kjkn")
text = "20"

[node name="Label20" type="Label" parent="Levels/Level20"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = -0.025
anchor_right = 1.0
anchor_bottom = -0.025
offset_left = -62.0
offset_top = -0.0249999
offset_right = -20.0
offset_bottom = 68.975
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "✰"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Levels/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Levels/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Levels/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Levels/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="Levels/Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Levels/Level6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="Levels/Level7" to="." method="_on_level_7_pressed"]
[connection signal="pressed" from="Levels/Level8" to="." method="_on_level_8_pressed"]
[connection signal="pressed" from="Levels/Level9" to="." method="_on_level_9_pressed"]
[connection signal="pressed" from="Levels/Level10" to="." method="_on_level_10_pressed"]
